<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Square Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <Space
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      />

  <EditText
      android:id="@+id/player_X"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:hint="@string/player_x"
      android:inputType="textCapWords"
      />

  <EditText
      android:id="@+id/player_O"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:hint="@string/player_o"
      android:inputType="textCapWords"
      />

  <Button
      android:id="@+id/start_game"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/let_s_play"
      />

  <Space
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      />

</LinearLayout>
