...
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1"
          />

      <EditText
          android:id="@+id/second_factor"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:hint="@string/second_factor_hint"
          android:inputType="textEmailAddress"
          />
...
